--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.3.5",
-    "primeflex": "^3.3.0",
+    "axios": "^1.6.8",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primevue": "^3.26.1",
-    "vue": "^3.4.21"
+    "primevue": "^3.51.0",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
