--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 VITE_API_BASE_URL="https://my-json-server.typicode.com/Dark7YT/CodepaceOrganization-SW56"
+VITE_API_TUTORS="https://my-json-server.typicode.com/Jemisas/APIS_AppWeb"
