--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.52.0",
     "vue": "^3.4.21",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
