--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL="https://my-json-server.typicode.com/Dark7YT/CodepaceOrganization-SW56"
+VITE_API_BASE_URL="http://localhost:3000/api/v1"
