--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "json-server": "^1.0.0-alpha.23",
+    "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.52.0",
