--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL="https://my-json-server.typicode.com/Dark7YT/CodepaceOrganization-SW56"
+VITE_API_BASE_URL="http://4.203.104.253:8080/api/v1"
